force-app/main/default/objects/Lead/fields/intent_score__c.field-meta.xml
<CustomField>
    <fullName>intent_score__c</fullName>
    <description>Score based on all trackable activities and engagement by the Lead or Contact. A Lead will reach MQL if their Intent Score is &gt;60 and Company Fit = TRUE.</description>
    <label>Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>