force-app/main/default/objects/Lead/fields/Lead_Source_Detail_picklist__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_picklist__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Detail</valueSetName>
    </valueSet>
</CustomField>