force-app/main/default/objects/Lead/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>TextArea</type>
</CustomField>