force-app/main/default/objects/Lead/fields/Tradeshow_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_Notes__c</fullName>
    <inlineHelpText>Here you&apos;ll find notes on this Lead&apos;s most recent interaction with Opsera at a Tradeshow.</inlineHelpText>
    <label>Tradeshow Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>