force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>utm_campaign of the Lead when they have responded to a Campaign, this will map to the Campaign Member field.</description>
    <label>utm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>