force-app/main/default/objects/Lead/recordTypes/MQL.recordType-meta.xml
<RecordType>
    <fullName>MQL</fullName>
    <active>true</active>
    <businessProcess>Raw</businessProcess>
    <label>Inbound</label>
</RecordType>