force-app/main/default/objects/Lead/listViews/Demo_Requests.listView-meta.xml
<ListView>
    <fullName>Demo_Requests</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail_picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>contains</operation>
        <value>Demo Request,Free Trial</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notContain</operation>
        <value>Events</value>
    </filters>
    <label>Direct Demo Requests</label>
</ListView>