force-app/main/default/objects/Lead/listViews/Filtered_MQLs.listView-meta.xml
<ListView>
    <fullName>Filtered_MQLs</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>intent_score__c</columns>
    <columns>persona_score__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.MQL</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <filters>
        <field>intent_score__c</field>
        <operation>greaterOrEqual</operation>
        <value>55</value>
    </filters>
    <label>Filtered MQLs</label>
</ListView>