force-app/main/default/objects/Lead/listViews/Ryan_Leads.listView-meta.xml
<ListView>
    <fullName>Ryan_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>MQL_Score__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail_picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.MQL</value>
    </filters>
    <filters>
        <field>MQL_Score__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>MQLs</label>
</ListView>