force-app/main/default/objects/Lead/listViews/SDR_Agency.listView-meta.xml
<ListView>
    <fullName>SDR_Agency</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Source_Detail_picklist__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>SDR Agency</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.MQL</value>
    </filters>
    <label>SDR Agency</label>
</ListView>