force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>MQL_Date__c</columns>
    <columns>MQL_Score__c</columns>
    <columns>MQL__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>Lead_Source_Detail_picklist__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <label>Today&apos;s Leads</label>
</ListView>